codegen/tests/fail/delegate/external_trait_without_attr.rs
use delegation_codegen::delegate;

#[delegate(derive(AsRef<str>))]
pub enum Name {
    First(String),
}

fn main() {}
