codegen/tests/fail/delegate/external_trait_without_attr.stderr
error: cannot find macro `AsRef` in this scope
 --> tests/fail/delegate/external_trait_without_attr.rs:3:19
  |
3 | #[delegate(derive(AsRef<str>))]
  |                   ^^^^^
  |
  = note: `AsRef` is in scope, but it is a trait, not a macro
